Fix Tests to add support for table save queries. Change ArrayList operators to simple Lists